k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nihon-quest
  labels:
    name: nihon-quest
    environment: production
