k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nihon-quest-ingress
  namespace: nihon-quest
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - nihonquest.com
    - www.nihonquest.com
    secretName: nihon-quest-tls
  rules:
  - host: nihonquest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nihon-quest-service
            port:
              number: 80
  - host: www.nihonquest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nihon-quest-service
            port:
              number: 80
